<resources>
    <string name="app_name">realWearV6</string>
    <string name="ip_address_label">Enter IP Address\n</string>
    <string name="stopStream">STOP</string>
    <string name="Stream">STREAM</string>
    <string name="rtsp_link">RTSP Link</string>
    <string name="share_stream">Share the stream</string>
    <string name="advanced_setting">Advanced</string>
    <string name="action_bar">Action Bar</string>
    <string name="more_option">MORE OPTIONS</string>
    <string name="zoom_level">ZOOM LEVEL</string>
    <string name="zoom_level1">1</string>
    <string name="zoom_level2">2</string>
    <string name="zoom_level3">3</string>
    <string name="home_title">FREE YOUR HANDS</string>
    <string name="home_titleDesc">Say Room Name to Select.</string>
    <string name="ipAddress">IP ADDRESS</string>
    <string name="result">Result</string>
    <string name="roomName">ROOM NAME</string>
    <string name="workflow">Workflow</string>
    <string name="workflow_desc">Description</string>
    <string name="room">Selected Room: None </string>
</resources>