<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <!--    <TextView-->
    <!--        android:id="@+id/testingMacAddress"-->
    <!--        android:layout_width="270dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        android:layout_marginTop="2dp"-->
    <!--        android:hint="MAC Address"-->
    <!--        android:gravity="center_horizontal"-->
    <!--        android:singleLine="true"-->
    <!--        android:textSize="20sp"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        />-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <EditText
        android:id="@+id/userInputIPAddress"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:contentDescription="Enter Ip Address"
        android:gravity="center_horizontal"
        android:hint="@string/ip_address_label"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIPSubmit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/dark_blue"
        android:contentDescription="hf_no_overlay"
        android:text="@string/Stream"
        android:textColor="@color/white"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/userInputIPAddress"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgBtnSetting"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:src="@drawable/setting_28"
        app:layout_constraintBottom_toBottomOf="@+id/btnIPSubmit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnIPSubmit" />

    <TextureView
        android:id="@+id/textureView"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userInputIPAddress" />

    <TextView
        android:id="@+id/tvRtspLink"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:gravity="center_horizontal"
        android:textSize="15dp"
        android:textIsSelectable="true"
        android:textStyle="italic"
        android:visibility="invisible"
        android:text="@string/rtsp_link"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/textureView"
        />

    <Button
        android:id="@+id/btnCloseStream"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/dark_blue"
        android:contentDescription="hf_no_overlay"
        android:text="@string/stopStream"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/btnIPSubmit"
        app:layout_constraintTop_toTopOf="@+id/btnIPSubmit"
        app:layout_constraintBottom_toBottomOf="@+id/btnIPSubmit" />
</androidx.constraintlayout.widget.ConstraintLayout>