<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".HomeFragment">

    <LinearLayout
        android:id="@+id/backgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="vertical"
        android:background="@drawable/main_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">


        <ImageView
            android:id="@+id/ivAppIcon"
            android:src="@drawable/app_icon_white"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="150dp"/>

        <TextView
            android:id="@+id/tvHomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_title"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="140dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selectionLayout"
        android:layout_width="360dp"
        android:layout_height="330dp"
        android:orientation="vertical"
        android:background="@drawable/spinner_background"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        app:layout_constraintTop_toBottomOf="@+id/backgroundLayout"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/tvTitleDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_titleDesc"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginLeft="55dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageBtnRefreshRoom"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/refresh"
                android:backgroundTint="@color/white"
                android:layout_marginStart="33dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:textSize="16dp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/frame_grey"
            android:layout_marginTop="10dp"/>

        <ListView
            android:id="@+id/lvRoomName"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:scrollbars="vertical"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnIPSubmit"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:text="@string/Stream"
        android:backgroundTint="@color/appicon_darkblue"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/selectionLayout"
        app:layout_constraintLeft_toLeftOf="@id/selectionLayout"
        app:layout_constraintRight_toRightOf="@+id/selectionLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>