<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".LiveStreamingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAppBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white_leftarrow"
            android:backgroundTint="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvRtspLink"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            android:textIsSelectable="true"
            android:textStyle="italic"
            android:visibility="invisible"
            android:text="@string/rtsp_link"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvRtspLink2"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/rtsp_link"
            android:textColor="@color/white"
            android:textIsSelectable="true"
            android:textSize="15sp"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutLiveStream"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layoutAppBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextureView
            android:id="@+id/textureView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutResults"
        android:layout_width="200dp"
        android:layout_height="360dp"
        android:orientation="vertical"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/layoutLiveStream"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/light_grey"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tvPassValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="value "
            android:textColor="@color/white"
            android:textIsSelectable="true"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvResult"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tvPassValue2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="value "
            android:textColor="@color/white"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvPassValue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tvPassValue3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="value "
            android:textColor="@color/white"
            android:textIsSelectable="true"
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvPassValue2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAction"
        android:layout_width="200dp"
        android:layout_height="360dp"
        android:orientation="vertical"
        android:background="@color/black"
        app:layout_constraintLeft_toRightOf="@+id/layoutResults"
        app:layout_constraintTop_toBottomOf="@+id/layoutLiveStream"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tvWorkflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workflow"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/light_grey"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/tvWorkflowDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/workflow_desc"
            android:textColor="@color/white"
            android:textIsSelectable="true"
            android:textSize="16dp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvWorkflow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/btnCloseStream"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/white"
            android:textSize="12sp"
            android:textAlignment="center"
            android:text="@string/stopStream"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>